--- a/perfume-shop-mobile/package.json
+++ b/perfume-shop-mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "perfume-shop-mobile",
-  "main": "expo-router/entry",
+  "main": "App.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
