Attempt React Navigation v6 downgrade
- Changed package.json to use React Navigation v6
- Modified Dockerfile to use npm install instead of npm ci
- App.js already compatible with v6 syntax

Note: Build process is slow due to dependency conflicts between Expo 52 and older React Navigation.
For production, consider using Expo Router or running locally.

--- a/perfume-shop-mobile/Dockerfile
+++ b/perfume-shop-mobile/Dockerfile
@@ -10,8 +10,8 @@ RUN apk add --no-cache git python3 make g++
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --legacy-peer-deps
+# Install dependencies (using install to update lock file)
+RUN npm install --legacy-peer-deps
 
 # Copy project files
 COPY . .
